# gameTest

./: .gitignore  .gitmodules  CMakeLists.txt  build-dbg.sh  build.sh
src/: CMakeLists.txt  application.cpp  application.h  gameState.cpp  gameState.h  gui.cpp  gui.h  main.cpp  parameters.h  pauseState.cpp  pauseState.h  player.cpp  player.h  resourceIdentifiers.h  state.cpp  state.h  stateIdentifiers.h  stateStack.cpp  stateStack.h  titleState.cpp  titleState.h  world.cpp  world.h
src/comp/: illness.h  position.h  velocity.h
src/components/: collisionBox.h  illness.h  position.h
src/systems/: CMakeLists.txt  collisionDetector.cpp  collisionDetector.h  health.cpp  health.h  movement.cpp  movement.h  renderer.cpp  renderer.h
src/utils/: CMakeLists.txt  occupancy.cpp  occupancy.h  quadtree.cpp  quadtree.h  quadtreeNode.cpp  quadtreeNode.h  resourceManager.cpp  resourceManager.h  statistics.cpp  statistics.h
